--- a/ui/package.json
+++ b/ui/package.json
@@ -63,7 +63,7 @@
     "echarts": "^5.2.2",
     "echarts-wordcloud": "^2.0.0",
     "file-saver": "1.3.8",
-    "jquery": "2.1.3",
+    "jquery": "^3.6.0",
     "jquery-ui-dist": "1.12.1",
     "jshint": "^2.13.1",
     "konva": "3.2.4",
@@ -90,7 +90,7 @@
     "@angular-devkit/build-angular": "^13.3.0",
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "^13.3.0",
-    "@cypress/webpack-batteries-included-preprocessor": "^2.2.3",
+    "@cypress/webpack-batteries-included-preprocessor": "^2.0.0",
     "@cypress/webpack-preprocessor": "^5.11.1",
     "@ngtools/webpack": "^13.3.0",
     "@types/angular": "^1.7.4",
@@ -104,7 +104,7 @@
     "assert": "^2.0.0",
     "codelyzer": "^6.0.0",
     "compression-webpack-plugin": "^9.2.0",
-    "copy-webpack-plugin": "^5.1.2",
+    "copy-webpack-plugin": "^10.2.4",
     "csv-string": "^4.1.0",
     "cypress": "^9.5.2",
     "cypress-file-upload": "^5.0.8",
