[STREAMPIPES-519] Cleanup dependencies

--- a/streampipes-wrapper-siddhi/pom.xml
+++ b/streampipes-wrapper-siddhi/pom.xml
@@ -57,6 +57,12 @@
             <groupId>io.siddhi.extension.execution.list</groupId>
             <artifactId>siddhi-execution-list</artifactId>
             <version>1.0.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
   
