[STREAMPIPES-534] Add support for authenticated extension services

--- a/streampipes-connect-container-worker/pom.xml
+++ b/streampipes-connect-container-worker/pom.xml
@@ -66,6 +66,13 @@
         </dependency>
         <!-- External dependencies -->
 
+
+        <!-- Dependency convergence -->
+        <dependency>
+            <groupId>net.minidev</groupId>
+            <artifactId>json-smart</artifactId>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
