--- a/pom.xml
+++ b/pom.xml
@@ -390,6 +390,11 @@ IoT data streams.
 					<version>2.3.1</version>
 				</dependency>
 				<dependency>
+					<groupId>net.minidev</groupId>
+					<artifactId>json-smart</artifactId>
+					<version>1.3.3</version>
+				</dependency>
+				<dependency>
 					<groupId>org.apache.httpcomponents</groupId>
 					<artifactId>fluent-hc</artifactId>
 					<version>${httpclient.version}</version>
