[STREAMPIPES-527] Use MQTT as default protocol in config, fix bug in preview

--- a/installer/cli/deploy/standalone/backend/docker-compose.yml
+++ b/installer/cli/deploy/standalone/backend/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - backend:/root/.streampipes
       - files:/spImages
     environment:
-      - SP_PRIORITIZED_PROTOCOL=${SP_PRIORITIZED_PROTOCOL:-kafka}
+      - SP_PRIORITIZED_PROTOCOL=${SP_PRIORITIZED_PROTOCOL:-mqtt}
       - SP_MQTT_HOST=${SP_MQTT_HOST:-activemq}
     logging:
       driver: "json-file"
