--- a/ui/package.json
+++ b/ui/package.json
@@ -14,11 +14,11 @@
     "start": "node ./deployment/prebuild.js && npm run build-libraries && ng serve",
     "test": "node ./deployment/prebuild.js && npm run build-libraries && ng test",
     "start-plain": "npm run build-libraries && ng serve",
-    "build-plain": "export NODE_OPTIONS=--max-old-space-size=10192 && npm run build-libraries && ng build --configuration production",
+    "build-plain": "set NODE_OPTIONS=--max-old-space-size=8192 && npm run build-libraries && ng build --configuration production",
     "run-prebuild-script": "node ./deployment/prebuild.js",
-    "build": "node ./deployment/prebuild.js && export NODE_OPTIONS=--max-old-space-size=10192 && npm run build-libraries && ng build --configuration production",
-    "build-dev": "node ./deployment/prebuild.js && export NODE_OPTIONS=--max-old-space-size=10192 && npm run build-libraries && ng build",
-    "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=10192 && npm run build-libraries && ng build --configuration production",
+    "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=8192 && npm run build-libraries && ng build --configuration production",
+    "build-dev": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=8192 && npm run build-libraries && ng build",
+    "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=8192 && npm run build-libraries && ng build --configuration production",
     "lint": "tslint -c tslint.json 'src/**/*.ts*",
     "analyze": "webpack-bundle-analyzer dist/stats.json",
     "test-cypress-open": "cypress open",
