--- a/ui/package.json
+++ b/ui/package.json
@@ -58,7 +58,7 @@
     "@panzoom/panzoom": "^4.4.3",
     "@swimlane/ngx-charts": "16.0.0",
     "angular-datatables": "^13.0.1",
-    "angular-gridster2": "^13.1.1",
+    "angular-gridster2": "13.1.1",
     "angular-plotly.js": "^4.0.0",
     "angular2-uuid": "1.1.1",
     "codemirror": "^5.55.0",
@@ -96,8 +96,7 @@
     "@angular-devkit/build-angular": "^13.3.0",
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "^13.3.0",
-    "@cypress/webpack-batteries-included-preprocessor": "^2.0.0",
-    "@cypress/webpack-preprocessor": "^5.11.1",
+    "@cypress/webpack-batteries-included-preprocessor": "^2.2.3",
     "@ngtools/webpack": "^13.3.0",
     "@types/angular": "^1.7.4",
     "@types/jasmine": "~3.6.0",
@@ -107,6 +106,7 @@
     "@types/node": "^12.19.3",
     "@types/rx": "^4.1.2",
     "@types/showdown": "1.9.3",
+    "ajv-keywords": "^5.1.0",
     "assert": "^2.0.0",
     "codelyzer": "^6.0.0",
     "compression-webpack-plugin": "^9.2.0",
@@ -114,7 +114,6 @@
     "csv-string": "^4.1.0",
     "cypress": "^9.5.2",
     "cypress-file-upload": "^5.0.8",
-    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.0",
     "jasmine-core": "^3.6.0",
     "js-yaml": "^3.14.0",
@@ -131,14 +130,17 @@
     "prettier": "1.14.2",
     "raw-loader": "^4.0.2",
     "resize-observer-polyfill": "^1.5.1",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^0.23.1",
     "to-string-loader": "^1.1.5",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "4.6.2",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
     "webpack-merge": "^5.8.0"
+  },
+  "overrides": {
+    "@angular-architects/module-federation": {
+      "@angular-architects/module-federation-runtime": "14.0.1"
+    }
   }
 }
