[STREAMPIPES-537] Change routing for apps module

--- a/ui/.gitignore
+++ b/ui/.gitignore
@@ -21,6 +21,7 @@ src/assets/lib/apps/*
 
 # prebuild
 src/app/app-routing.module.ts
+src/app/app-overview/apps.ts
 src/app/appng5.module.ts
 src/app/home/home.service.ts
 src/app/services/version/version.service.ts
