--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,3 +129,12 @@ jobs:
           platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
           push: true
           tags: ${{ env.DOCKERHUB_APACHE_REPO }}/pipeline-elements-all-jvm:${{ env.MVN_VERSION }}
+
+      - name: Build and Push Docker Image sources-watertank-simulator
+        uses: docker/build-push-action@v2
+        with:
+          context: ./streampipes-extensions/streampipes-sources-watertank-simulator
+          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
+          push: true
+          tags: ${{ env.DOCKERHUB_APACHE_REPO }}/sources-watertank-simulator:${{ env.MVN_VERSION }}
+
