[STREAMPIPES-553] Add kafka deployment to lite configuration

--- a/installer/k8s/values.yaml
+++ b/installer/k8s/values.yaml
@@ -15,8 +15,9 @@
 
 # lite or full (default: lite)
 deployment: lite
+preferredBroker: "kafka"
 pullPolicy: "IfNotPresent"
-persistentVolumeReclaimPolicy: "Retain"
+persistentVolumeReclaimPolicy: "Delete"
 persistentVolumeAccessModes: "ReadWriteOnce"
 
 streampipes:
