--- a/ui/package.json
+++ b/ui/package.json
@@ -87,7 +87,7 @@
     "shepherd.js": "^9.0.0",
     "showdown": "1.9.1",
     "stream-browserify": "3.0.0",
-    "swagger-ui": "^4.2.1",
+    "swagger-ui": "4.12.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
