--- a/pom.xml
+++ b/pom.xml
@@ -957,6 +957,7 @@ IoT data streams.
 			<module>streampipes-resource-management</module>
 			<module>streampipes-sdk-bundle</module>
             <module>streampipes-data-explorer-commons</module>
+            <module>streampipes-data-export</module>
         </modules>
 
 		<profiles>
@@ -1272,6 +1273,9 @@ IoT data streams.
 
 						<!-- Exclude some UI files which we need to check in more detail -->
 						<exclude>ui/src/assets/img/svg/**</exclude>
+
+						<!-- Exclude .angular folder -->
+						<exclude>ui/.angular/**</exclude>
 
 						<!-- Exclude disclaimer and notice files -->
 						<exclude>DISCLAIMER</exclude>
