--- a/streampipes-rest/pom.xml
+++ b/streampipes-rest/pom.xml
@@ -52,6 +52,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-data-export</artifactId>
+            <version>0.70.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-measurement-units</artifactId>
             <version>0.70.0-SNAPSHOT</version>
         </dependency>
