[STREAMPIPES-563] Move data lake logic into package streampipes-data-explorer-commons

--- a/streampipes-extensions/streampipes-sinks-internal-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-sinks-internal-jvm/pom.xml
@@ -56,6 +56,7 @@
         </dependency>
 
         <!-- External dependencies -->
+        <!-- TODO remove after refactoring -->
         <dependency>
             <groupId>org.lightcouch</groupId>
             <artifactId>lightcouch</artifactId>
@@ -64,6 +65,8 @@
             <groupId>org.influxdb</groupId>
             <artifactId>influxdb-java</artifactId>
         </dependency>
+        <!-- TODO remove after refactoring -->
+
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
