[maven-release-plugin] prepare branch v 0.70.0

--- a/streampipes-extensions/streampipes-pipeline-elements-all-flink/pom.xml
+++ b/streampipes-extensions/streampipes-pipeline-elements-all-flink/pom.xml
@@ -124,4 +124,8 @@
         </plugins>
         <finalName>streampipes-pipeline-elements-all-flink</finalName>
     </build>
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
