--- a/streampipes-extensions/streampipes-pipeline-elements-all-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-pipeline-elements-all-jvm/pom.xml
@@ -148,4 +148,8 @@
         </plugins>
         <finalName>streampipes-processors-all-jvm</finalName>
     </build>
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
