--- a/streampipes-extensions/streampipes-processors-pattern-detection-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-pattern-detection-flink/pom.xml
@@ -158,4 +158,8 @@
         <finalName>streampipes-processors-pattern-detection-flink</finalName>
     </build>
 
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
