--- a/streampipes-extensions/streampipes-connect-adapters/pom.xml
+++ b/streampipes-extensions/streampipes-connect-adapters/pom.xml
@@ -216,4 +216,8 @@
         <finalName>streampipes-connect-adapters</finalName>
     </build>
 
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
