--- a/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
@@ -91,4 +91,8 @@
         <finalName>streampipes-extensions-all-jvm</finalName>
     </build>
 
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
