--- a/streampipes-extensions/streampipes-pipeline-elements-shared/pom.xml
+++ b/streampipes-extensions/streampipes-pipeline-elements-shared/pom.xml
@@ -62,5 +62,9 @@
             <version>0.70.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
 
