--- a/streampipes-extensions/streampipes-processors-aggregation-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-aggregation-flink/pom.xml
@@ -176,4 +176,8 @@
         </plugins>
         <finalName>streampipes-processors-aggregation-flink</finalName>
     </build>
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
