--- a/streampipes-extensions/streampipes-processors-enricher-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-enricher-flink/pom.xml
@@ -91,4 +91,8 @@
         </plugins>
         <finalName>streampipes-processors-enricher-flink</finalName>
     </build>
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
