--- a/streampipes-extensions/streampipes-processors-geo-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-geo-flink/pom.xml
@@ -84,4 +84,8 @@
         </plugins>
         <finalName>streampipes-processors-geo-flink</finalName>
     </build>
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
