--- a/streampipes-extensions/streampipes-processors-statistics-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-statistics-flink/pom.xml
@@ -96,4 +96,8 @@
         </plugins>
         <finalName>streampipes-processors-statistics-flink</finalName>
     </build>
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
