--- a/streampipes-extensions/streampipes-processors-transformation-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-transformation-flink/pom.xml
@@ -133,4 +133,8 @@
         <finalName>streampipes-processors-transformation-flink</finalName>
     </build>
 
+
+  <scm>
+    <tag>rel/0.70.0</tag>
+  </scm>
 </project>
