--- a/installer/k8s/Chart.yaml
+++ b/installer/k8s/Chart.yaml
@@ -14,11 +14,11 @@
 # limitations under the License.
 
 apiVersion: v1
-appVersion: "0.70.0-SNAPSHOT"
+appVersion: "0.70.0"
 description: Self-Service Data Analytics for the Industrial IoT
 name: streampipes-helm-chart
 home: https://streampipes.apache.org
-version: 0.70.0-SNAPSHOT
+version: 0.70.0
 icon: https://avatars1.githubusercontent.com/u/33908576
 maintainers:
   - name: Dominik Riemer
