--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apache-streampipes",
-  "version": "0.70.0-SNAPSHOT",
+  "version": "0.70.0",
   "description": "Apache StreamPipes (incubating) user interface",
   "homepage": "http://streampipes.apache.org",
   "repository": {
