--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
 <groupId>org.apache.streampipes</groupId>
 <artifactId>streampipes-parent</artifactId>
-<version>0.70.0-SNAPSHOT</version>
+<version>0.70.0</version>
 <packaging>pom</packaging>
 
 <properties>
@@ -1385,7 +1385,7 @@ IoT data streams.
 		<developerConnection>scm:git:ssh://git@github.com/apache/incubator-streampipes.git</developerConnection>
 		<connection>scm:git:ssh://git@github.com/apache/incubator-streampipes.git</connection>
 		<url>https://github.com/apache/incubator-streampipes</url>
-		<tag>rel/0.70.0</tag>
+		<tag>release/0.70.0</tag>
 	</scm>
 
 	<issueManagement>
