--- a/streampipes-extensions/pom.xml
+++ b/streampipes-extensions/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.70.0-SNAPSHOT</version>
+        <version>0.70.0</version>
     </parent>
 
     <artifactId>streampipes-extensions</artifactId>
@@ -621,7 +621,7 @@
             <plugin>
                 <groupId>org.apache.streampipes</groupId>
                 <artifactId>streampipes-maven-plugin</artifactId>
-                <version>0.70.0-SNAPSHOT</version>
+                <version>0.70.0</version>
             </plugin>
         </plugins>
     </build>
