--- a/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>streampipes-extensions</artifactId>
         <groupId>org.apache.streampipes</groupId>
-        <version>0.70.0-SNAPSHOT</version>
+        <version>0.70.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-container-extensions</artifactId>
-            <version>0.70.0-SNAPSHOT</version>
+            <version>0.70.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.graalvm.nativeimage</groupId>
@@ -46,7 +46,7 @@
             <dependency>
                 <groupId>org.apache.streampipes</groupId>
                 <artifactId>streampipes-pipeline-elements-all-jvm</artifactId>
-                <version>0.70.0-SNAPSHOT</version>
+                <version>0.70.0</version>
                 <classifier>embed</classifier>
             </dependency>
 
@@ -54,13 +54,13 @@
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-connect-adapters</artifactId>
-            <version>0.70.0-SNAPSHOT</version>
+            <version>0.70.0</version>
             <classifier>embed</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.streampipes</groupId>
             <artifactId>streampipes-connect-adapters-iiot</artifactId>
-            <version>0.70.0-SNAPSHOT</version>
+            <version>0.70.0</version>
             <classifier>embed</classifier>
         </dependency>
 
@@ -90,4 +90,8 @@
         </plugins>
         <finalName>streampipes-extensions-all-jvm</finalName>
     </build>
+
+  <scm>
+    <tag>release/0.70.0</tag>
+  </scm>
 </project>
