--- a/ui/angular.json
+++ b/ui/angular.json
@@ -7,6 +7,7 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
+      "prefix": "sp",
       "architect": {
         "build": {
           "builder": "@angular-builders/custom-webpack:browser",
@@ -171,6 +172,11 @@
           }
         }
       }
+    }
+  },
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
     }
   },
   "defaultProject": "app"
