--- a/pom.xml
+++ b/pom.xml
@@ -963,6 +963,7 @@ IoT data streams.
 			<module>streampipes-sdk-bundle</module>
             <module>streampipes-data-explorer-commons</module>
             <module>streampipes-data-export</module>
+            <module>streampipes-messaging-nats</module>
         </modules>
 
 		<profiles>
