--- a/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-extensions-all-jvm/pom.xml
@@ -64,6 +64,12 @@
             <classifier>embed</classifier>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.streampipes</groupId>
+            <artifactId>streampipes-messaging-nats</artifactId>
+            <version>0.71.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Dependency convergence -->
         <dependency>
             <groupId>org.antlr</groupId>
