--- a/streampipes-extensions/pom.xml
+++ b/streampipes-extensions/pom.xml
@@ -24,6 +24,7 @@
         <groupId>org.apache.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
         <version>0.71.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>streampipes-extensions</artifactId>
@@ -136,7 +137,6 @@
         <opencsv.version>5.5.2</opencsv.version>
         <plc4x.version>0.9.1</plc4x.version>
         <protobuf.version>3.16.3</protobuf.version>
-        <nats.version>2.11.0</nats.version>
 
     </properties>
 
