--- a/streampipes-extensions/streampipes-sinks-brokers-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-sinks-brokers-jvm/pom.xml
@@ -22,6 +22,7 @@
         <artifactId>streampipes-extensions</artifactId>
         <groupId>org.apache.streampipes</groupId>
         <version>0.71.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -81,6 +82,7 @@
         <dependency>
             <groupId>io.nats</groupId>
             <artifactId>jnats</artifactId>
+            <version>${nats.version}</version>
         </dependency>
 
         <!-- dependency convergence -->
