--- a/ui/package.json
+++ b/ui/package.json
@@ -94,6 +94,11 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^13.1.0",
     "@angular-devkit/build-angular": "^13.3.0",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
     "@angular/cli": "^13.3.0",
     "@angular/compiler-cli": "^13.3.0",
     "@cypress/webpack-batteries-included-preprocessor": "2.2.3",
@@ -107,14 +112,16 @@
     "@types/node": "^12.19.3",
     "@types/rx": "^4.1.2",
     "@types/showdown": "1.9.3",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
     "ajv-keywords": "^5.1.0",
     "assert": "^2.0.0",
-    "codelyzer": "^6.0.0",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.4",
     "csv-string": "^4.1.0",
     "cypress": "^10.9.0",
     "cypress-file-upload": "^5.0.8",
+    "eslint": "^8.17.0",
     "html-webpack-plugin": "^5.5.0",
     "jasmine-core": "^3.6.0",
     "js-yaml": "^3.14.0",
@@ -132,7 +139,6 @@
     "raw-loader": "^4.0.2",
     "resize-observer-polyfill": "^1.5.1",
     "to-string-loader": "^1.1.5",
-    "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "4.6.2",
     "webpack": "^5.73.0",
