--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -19,7 +19,8 @@
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/recommended",
         "plugin:@angular-eslint/recommended--extra",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "prettier"
       ],
       "rules": {
         "@angular-eslint/component-selector": [
