--- a/ui/package.json
+++ b/ui/package.json
@@ -19,7 +19,7 @@
     "build": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=8192 && npm run build-libraries && ng build --configuration production",
     "build-dev": "node ./deployment/prebuild.js && set NODE_OPTIONS=--max-old-space-size=8192 && npm run build-libraries && ng build",
     "build-rc": "node ./deployment/prebuild.js rel && set NODE_OPTIONS=--max-old-space-size=8192 && npm run build-libraries && ng build --configuration production",
-    "lint": "tslint -c tslint.json 'src/**/*.ts*",
+    "lint": "prettier --check . && ng lint",
     "analyze": "webpack-bundle-analyzer dist/stats.json",
     "test-cypress-open": "cypress open",
     "test-cypress-smoke": "npx cypress run --spec 'cypress/tests/**/*.smoke.spec.ts'",
@@ -122,6 +122,7 @@
     "cypress": "^10.9.0",
     "cypress-file-upload": "^5.0.8",
     "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
     "html-webpack-plugin": "^5.5.0",
     "jasmine-core": "^3.6.0",
     "js-yaml": "^3.14.0",
@@ -139,7 +140,6 @@
     "raw-loader": "^4.0.2",
     "resize-observer-polyfill": "^1.5.1",
     "to-string-loader": "^1.1.5",
-    "tslint-config-prettier": "^1.15.0",
     "typescript": "4.6.2",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
