--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -32,7 +32,7 @@ jobs:
           java-version: '11'
 
       - name: Validate code with RAT plugin
-        run: mvn rat:rat
+        run: mvn apache-rat:check
 
   run-cypress-e2e-tests:
     runs-on: ubuntu-latest
