[STREAMPIPES-597] Add warning schema message when adapter is edited

--- a/ui/.eslintrc.json
+++ b/ui/.eslintrc.json
@@ -9,14 +9,12 @@
                 "createDefaultProgram": true
             },
             "extends": [
-                "plugin:@angular-eslint/recommended",
+                "prettier",
                 "plugin:@angular-eslint/recommended",
                 "plugin:@angular-eslint/recommended--extra",
-                "plugin:@angular-eslint/template/process-inline-templates",
-                "prettier"
+                "plugin:@angular-eslint/template/process-inline-templates"
             ],
             "rules": {
-                "max-len": [2, {"ignorePattern": "^import .*" }],
                 "@angular-eslint/component-selector": [
                     "error",
                     {
