[STREAMPIPES-602] Bump Angular to v14, update dependencies

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -186,8 +186,9 @@
       "style": "scss"
     }
   },
-  "defaultProject": "app",
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
