--- a/ui/projects/streampipes/platform-services/package.json
+++ b/ui/projects/streampipes/platform-services/package.json
@@ -2,10 +2,10 @@
   "name": "@streampipes/platform-services",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^13.3.0",
-    "@angular/core": "^13.3.0",
-    "rxjs": "6.6.2",
-    "angular-gridster2": "^13.1.1"
+    "@angular/common": "^14.2.7",
+    "@angular/core": "^14.2.7",
+    "rxjs": "^7.5.7",
+    "angular-gridster2": "^14.1.2"
   },
   "dependencies": {
     "tslib": "^2.3.0"
