--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,7 @@
 	<opennlp.version>1.9.0</opennlp.version>
 	<postgresql.version>42.4.1</postgresql.version>
 	<pulsar.version>2.10.1</pulsar.version>
+	<rocketmq.version>5.0.2</rocketmq.version>
 	<quartz.version>2.3.2</quartz.version>
 	<scala-lang.version>2.11.12</scala-lang.version>
 	<scala-parser-combinators.version>1.1.1</scala-parser-combinators.version>
@@ -1269,6 +1270,11 @@ IoT data streams.
 					<groupId>org.apache.pulsar</groupId>
 					<artifactId>pulsar-client</artifactId>
 					<version>${pulsar.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.rocketmq</groupId>
+					<artifactId>rocketmq-client-java</artifactId>
+					<version>${rocketmq.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.atteo.classindex</groupId>
