--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -77,3 +77,36 @@ jobs:
           wait-on-timeout: 120
           spec: cypress/tests/**/*.smoke.spec.ts
           working-directory: ui
+
+  python-quality-checks:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Cache Python dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip${{ hashFiles('**/setup.py') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install Python dependencies
+        run: |
+          cd ./streampipes-client-python
+          python -m pip install --upgrade pip
+          pip install wheel
+          pip install -e ".[dev]"
+
+      - name: Run style & code checks
+        run: |
+          cd ./streampipes-client-python
+          pre-commit run --files streampipes_client/*
+          pre-commit run --files tests/*
+          make mypy
+          make lint
