--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -36,6 +36,7 @@ jobs:
 
   run-cypress-e2e-tests:
     runs-on: ubuntu-latest
+    needs: [python-quality-checks, python-unit-tests]
     steps:
       - name: Checkout
         uses: actions/checkout@v1
